# iat-eeg

./: .gitignore  main.py  pyproject.toml
erp/: Paper ERP noviembre 2025.ipynb  data_subjects.csv  data_victims_non-victims.csv  medidas-erp.ipynb  pruebas-hipotesis.ipynb
preprocessing/: Preprocesamiento definitivo.ipynb  log_processing.csv
